force-app/main/default/objects/SIS_Academic_Certification_Attribute__c/SIS_Academic_Certification_Attribute__c.object-meta.xml
<CustomObject>
    <label>Attribut de la reconnaissance</label>
    <nameField>
        <displayFormat>ACA-{0000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attributs de la reconnaissance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>