force-app/main/default/objects/SIS_Academic_Certification_Attribute__c/fields/Issued_accreditation__c.field-meta.xml
<CustomField>
    <fullName>Issued_accreditation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued accreditation</label>
    <referenceTo>SIS_Issued_accreditation__c</referenceTo>
    <relationshipName>Academic_Certification_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>