force-app/main/default/objects/SIS_Academic_Certification_Attribute__c/fields/SIS_Academic_Certification__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_Certification__c</fullName>
    <label>Academic Certification</label>
    <referenceTo>hed__Academic_Certification__c</referenceTo>
    <relationshipName>Academic_Certification_Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>