force-app/main/default/objects/SIS_Academic_Certification_Attribute__c/fields/SIS_Scope__c.field-meta.xml
<CustomField>
    <fullName>SIS_Scope__c</fullName>
    <formula>TEXT(Issued_accreditation__r.Credential__r.SIS_Scope__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope</label>
    <type>Text</type>
</CustomField>