force-app/main/default/objects/SIS_Academic_Certification_Attribute__c/fields/SIS_Selected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SIS_Selected_End_Date__c</fullName>
    <formula>IF(
ISBLANK(End_Date__c),
 Issued_accreditation__r.End_Date__c,
End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selected End Date</label>
    <type>Date</type>
</CustomField>