force-app/main/default/objects/SIS_Academic_Certification_Attribute__c/fields/SIS_Selected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SIS_Selected_Start_Date__c</fullName>
    <formula>IF(
ISBLANK(Start_Date__c),
 Issued_accreditation__r.Start_Date__c,
Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selected Start Date</label>
    <type>Date</type>
</CustomField>